--- a/package.json
+++ b/package.json
@@ -37,7 +37,12 @@
   },
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
+    "@mui/icons-material": "^5.15.20",
+    "@mui/material": "^5.15.20",
     "electron-squirrel-startup": "^1.0.1",
+    "predictionary": "^1.6.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   }
