--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
     "predictionary": "^1.6.0",
     "react": "^18.3.1",
