--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v2
         with:
-          name: Camera Mouse Package Exe
+          name: Package app
           path: out/make
       - name: Release (with exe .file)
         uses: softprops/action-gh-release@v1
         with:
-          files: out/make/*.exe
+          files: out/make/squirrel.windows/x64/*.exe
