--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
     branches:
       - main
 jobs:
-  electronWindows:
+  release:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v3
@@ -27,5 +27,6 @@ jobs:
           path: out/make
       - name: Release (with exe .file)
         uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
           files: out/make/squirrel.windows/x64/*.exe
