--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@electron-forge/plugin-fuses": "^7.4.0",
     "@electron-forge/plugin-webpack": "^7.4.0",
     "@electron/fuses": "^1.8.0",
-    "@vercel/webpack-asset-relocator-loader": "^1.7.3",
+    "@vercel/webpack-asset-relocator-loader": "1.7.3",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.11.0",
     "electron": "31.0.1",
@@ -40,8 +40,10 @@
     "@electron/build-tools": "^1.2.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@mui/base": "^5.0.0-beta.58",
     "@mui/icons-material": "^5.15.20",
     "@mui/material": "^5.15.20",
+    "@react-spring/web": "^9.7.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "electron-squirrel-startup": "^1.0.1",
